Add PNM Hometown Map and related scripts
Added PNM Hometown Map section with scripts.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <h1>Welcome to the Kappa Class Website</h1>
   <p>This website will showcase our PNM's!</p>
 
+  <!--  -->
+  <h2>PNM Hometown Map</h2>
+  <div id="map" style="height: 500px;"></div>
+  <script src="pnmData.js"></script>
+  <script src="script.js"></script>
+
   <img src="images/sample.jpg" alt="Sample Photo" width="200">
 
   <button onclick="sayHello()">Click Me</button>
