--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <option>Both</option>
       <option>Whatever is there</option>
     </select>
-    <p>If there's free food, what are you?</p>
+    <p>If there's free food, what do you do?</p>
     <select id="freeFood">
       <option value="" disabled selected>Select...</option>
       <option>First in line</option>
